# ConneqtedAgents-Assesment

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  assesment.md  main.py  pyproject.toml  supervisord.conf
.github/workflows/: ci-cd.yml
app/: crud.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: edfdb4f1e721_initial_migration.py
scripts/: entrypoint.sh  ingest_data.py
