[project]
name = "conneqtedagents-assesment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "supervisor>=4.3.0",
]
